<resources>
    <string name="app_name">Technical Assessment</string>
    <string name="address_label">What is your address?</string>
    <string name="insurer_label">Who is your current insurer?</string>
    <string name="start_button">Start</string>
    <string name="auto_complete_address_hint">e.g. 123 Main Street</string>
    <string name="auto_complete_insurer_hint">e.g. Geico</string>

    <string name="common_next">Next</string>
    <string name="common_finish">Finish</string>
    <string name="common_ok">Ok</string>
    <string name="common_no_options_title">No Option Selected</string>
    <string name="common_no_options_message">Select one of the options to continue</string>

    <string name="summary_address_label">Address: </string>
    <string name="summary_insurer_label">Insurer: </string>

</resources>
