<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             tools:context=".carrier.CarrierFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/insurer_label"
        android:layout_margin="16dp"/>

    <AutoCompleteTextView
        android:id="@+id/auto_complete_carrier"
        android:hint="@string/auto_complete_insurer_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/next_btn"
        android:text="@string/common_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>