<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:orientation="vertical"
             tools:context=".address.AddressFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/address_label"
        android:layout_margin="16dp"
        android:layout_gravity="center_horizontal"/>

    <AutoCompleteTextView
        android:id="@+id/auto_complete_address"
        android:hint="@string/auto_complete_address_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/next_btn"
        android:text="@string/common_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>